--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-# SPDX-FileCopyrightText: Contributors to the Eye and Mouse Extended GNOME extension.
+# SPDX-FileCopyrightText: djinnalexio
 
 # Ignore Node.js dependencies
 node_modules/
