--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eye-on-cursor",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "Let your desktop \"keep an eye\" on your mouse! And with the included cursor indicator, keep track of your pointer's every action!",
     "license": "GPL-3.0-or-later",
     "main": "eye-on-cursor@djinnalexio.github.io/extension.js",
@@ -15,7 +15,7 @@
     "scripts": {
         "format": "prettier ./eye-on-cursor@djinnalexio.github.io/ --write",
         "lint": "eslint ./eye-on-cursor@djinnalexio.github.io/ --fix",
-        "test": "make test"
+        "test": "make test-wayland"
     },
     "prettier": {
         "arrowParens": "avoid",
