--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eye-on-cursor",
-    "version": "1.3.1",
+    "version": "2.0.0.dev",
     "description": "Let your desktop \"keep an eye\" on your mouse! And with the included cursor indicator, keep track of your pointer's every action!",
     "license": "GPL-3.0-or-later",
     "main": "eye-on-cursor@djinnalexio.github.io/extension.js",
