--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,19 +1,14 @@
-'project_id': '734021'
-'api_token_env': 'CROWDIN_PERSONAL_TOKEN'
-'base_path': '.'
-'base_url': 'https://api.crowdin.com'
-'preserve_hierarchy': true
+project_id_env: EYE_ON_CURSOR_CROWDIN_PROJECT_ID
+api_token_env: CROWDIN_PERSONAL_TOKEN
+
+preserve_hierarchy: true
 
 files:
-    [
-        {
-            'source': '/po/eye-on-cursor.pot',
-            'translation': '/po/%two_letters_code%.po',
-            'ignore': ['/**/%locale_with_underscore%'],
-        },
-        {
-            'source': '/po/eye-on-cursor.pot',
-            'translation': '/po/%locale_with_underscore%.po',
-            'ignore': ['/**/%two_letters_code%.po'],
-        },
-    ]
+    - source: /po/eye-on-cursor.pot
+      translation: /po/%locale%.po
+      type: gettext
+      languages_mapping:
+      locale:
+          en-GB: en_GB
+          zh-CN: zh_CN
+          zh-TW: zh_TW
